tests/sumo/output/vtypeprobe/errors/freq_false/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'freq' in definition of vTypeProbe 'test1' is not a valid time value.
Quitting (on error).
